# hunmin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  HANDOFF.md  LICENSE  NEXT_TODO.md  README.md  RELEASE_CHECK_2.2.1_2026-04-30.md  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  lang_request.md
.github/workflows/: publish.yml  test.yml
.mypy_cache/: missing_stubs
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _random.data.json  _random.meta.json  _sitebuiltins.data.json  _sitebuiltins.meta.json  _socket.data.json  _socket.meta.json  (+159 more)
.mypy_cache/3.10/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.10/annotated_doc/: __init__.data.json  __init__.meta.json  main.data.json  main.meta.json
.mypy_cache/3.10/annotated_types/: __init__.data.json  __init__.meta.json
.mypy_cache/3.10/anyio/: __init__.data.json  __init__.meta.json  from_thread.data.json  from_thread.meta.json  lowlevel.data.json  lowlevel.meta.json  to_thread.data.json  to_thread.meta.json
.mypy_cache/3.10/asyncio/: __init__.data.json  __init__.meta.json  base_events.data.json  base_events.meta.json  base_futures.data.json  base_futures.meta.json  coroutines.data.json  coroutines.meta.json  events.data.json  events.meta.json  exceptions.data.json  exceptions.meta.json  futures.data.json  futures.meta.json  locks.data.json  locks.meta.json  mixins.data.json  mixins.meta.json  protocols.data.json  protocols.meta.json  queues.data.json  queues.meta.json  runners.data.json  runners.meta.json  selector_events.data.json  selector_events.meta.json  streams.data.json  streams.meta.json  subprocess.data.json  subprocess.meta.json  tasks.data.json  tasks.meta.json  threads.data.json  threads.meta.json  transports.data.json  transports.meta.json  unix_events.data.json  unix_events.meta.json
.mypy_cache/3.10/attr/: __init__.data.json  __init__.meta.json  _version_info.data.json  _version_info.meta.json  converters.data.json  converters.meta.json  exceptions.data.json  exceptions.meta.json  filters.data.json  filters.meta.json  setters.data.json  setters.meta.json  validators.data.json  validators.meta.json
.mypy_cache/3.10/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.10/concurrent/: __init__.data.json  (+1 more)
demo/: web_demo.py
docs/: API_REFERENCE.md  API_STABILITY.md  PERFORMANCE.md  SESSION_2026-05-01.md  STRUCTURE.md  UHPS_FULL_SHOWCASE.md  UHPS_SPEC.md
docs/v3.38_drafts/: czech_v3.38_patch.py
examples/: basic.py
hunmin/: __init__.py  __main__.py  api.py  auto.py  cli.py  entity.py  quiz.py  reverse.py  server.py  tts.py
hunmin-3.23.0/: README.md  pyproject.toml
hunmin-3.23.0/hunmin/: __init__.py  auto.py  cli.py
hunmin-3.23.0/tests/: test_api.py  test_auto.py  test_english.py  test_external.py  test_multilang.py  test_uhps_spec.py
hunmin/core/: __init__.py  arabic.py  cjk.py  croatian.py  czech.py  dutch.py  english.py  french.py  german.py  greek.py  hebrew.py  hindi.py  hungarian.py  indonesian.py  italian.py  persian.py  polish.py  portuguese.py  romanian.py  russian.py  slovak.py  spanish.py  thai.py  turkish.py  universal.py  vietnamese.py
scripts/: benchmark.py  build_wiki_corpus.py  eval_all_gold.py  eval_entity_queries.py  eval_heldout_1000.py  gen_uhps_external_v2.py  phonetic_entity_cli.py  seed_titles.txt  wikidata_complete_entities.py  wikidata_dump_to_entities.py  wikidata_sparql_to_entities.py
tests/: bench_cjk.py  bench_en.py  bench_multi.py  test_auto.py  test_cjk_spec.py  test_entity.py  test_entity_eval.py  test_heldout_1000.py  test_multilang.py  test_properties.py  test_stress.py  test_uhps_showcase.py
tests/gold/: en_gold.tsv  en_heldout.tsv  en_heldout_diverse.tsv  entity_queries_100.jsonl  heldout_1000.tsv  ja_gold.tsv  ja_wikidata.tsv  multi_gold.tsv  multi_heldout.tsv  uhps_external.jsonl  uhps_external_v2.jsonl  uhps_showcase.jsonl  wiki_50.tsv  zh_wikidata.tsv
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
(+866 files in other folders)
